# dwm-status-rust

./: Cargo.toml  README.md  rsblocks.yml
src/: block_manager.rs  blockmanager.rs  config.rs  date.rs  disk.rs  lib.rs  load_config.rs  main.rs  mem.rs  run.rs  sound.rs  types.rs
src/config/: battery.rs  brightness.rs  mod.rs  nordvpn.rs
src/utils/: battery.rs  bitcoins.rs  cpu.rs  disk.rs  load_average.rs  memory.rs  mod.rs  mpd.rs  netspeed.rs  nordvpn.rs  pub_ip.rs  spotify.rs  time.rs  uptime.rs  volume.rs  weather.rs
