[package]
name = "rsblocks"
version = "0.1.16"
authors = ["mustafa salih <mustafasalih1991@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["linux", "dwm","statusbar"]
repository = "https://github.com/MustafaSalih1993/rsblocks"
description = "a multi threaded status bar for dwm window manager for linux"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.5"
chrono = "0.4"
dbus = "0.9"
lazy_static = "1.4"
minreq = {version = "2.2", features = ["https","json-using-serde"]}
mpd = "0.0.12"
nix = "0.20"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
battery = "0.7"

[dependencies.breadx]
version = "0.1.11"
features = ["async"]
